--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,11 @@
             align-items: center;
         }
 
+        .heading {
+            margin-top: 10%;
+            margin-bottom: 10%;
+        }
+
         .select-element {
             width: 80%;
             margin-top: 8%;
@@ -55,11 +60,17 @@
             margin-top: 15%;
         }
 
+        .submit:hover {
+            background-color: antiquewhite;
+        }
+
     </style>
 </head>
 <body>
     <div class="body">
         <div class="container">
+
+            <h1 class="heading">Class selection</h1>
 
             <select name="select-class" id="select-class" class="select-element">
                 <option value="" class="options">--Select a class--</option>
