--- a/templates/attend.html
+++ b/templates/attend.html
@@ -2,10 +2,128 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <title>BlitzAttend</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        html, body {
+            width: 100%;
+            height: 100%;
+        }
+
+        .body {
+            width: 100%;
+            height: 100%;
+            background-color: antiquewhite;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+        }   
+
+        .container {
+            width: 20vw;
+            height: 80vh;
+            background-color: aqua;
+            border-radius: 36px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .rollno {
+            width: 80%;
+            height: 25%;
+            margin-top: 10%;
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: aliceblue;
+        }
+
+        .name {
+            width: 80%;
+            height: 5%;
+            background-color: aliceblue;
+            border-radius: 10px;
+            margin-top: 2%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .prn {
+            width: 80%;
+            height: 5%;
+            background-color: aliceblue;
+            border-radius: 10px;
+            margin-top: 2%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .batch {
+            width: 80%;
+            height: 5%;
+            background-color: aliceblue;
+            border-radius: 10px;
+            margin-top: 2%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .buttons {
+            width: 80%;
+            height: 20%;
+            margin-top: 10%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+
+        .button {
+            width: 48%;
+            border-radius: 10px;
+        }
+
+        .button-present:hover {
+            background-color: green;
+        }
+
+        .button-absent:hover {
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="body">
+        <div class="container">
+
+            <div class="rollno">-- roll no --</div>
+
+            <div class="name"> -- name -- </div>
+
+            <div class="prn">-- prn -- </div>
+
+            <div class="batch">-- batch -- </div>
+
+            <div class="buttons">
+                <input type="submit" value="Absent" class="button button-absent">
+                <input type="submit" value="Present" class="button button-present">
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
