--- a/templates/index.html
+++ b/templates/index.html
@@ -4,102 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <title>BlitzAttend</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        html, body {
-            width: 100%;
-            height: 100%;
-        }
-
-        .body {
-            width: 100%;
-            height: 100%;
-            background-color: antiquewhite;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-        }   
-
-        .container {
-            min-width: 20vw;
-            min-height: 80vh;
-            background-color: aqua;
-            border-radius: 36px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .container form {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .heading {
-            margin-top: 10%;
-            margin-bottom: 10%;
-        }
-
-        .select-element {
-            margin-top: 8%;
-            width: 80%;
-            padding: 12px;
-            border-radius: 12px;
-            font-size: 1rem;
-            background-color: aliceblue;
-        }
-        
-        .submit {
-            width: 80%;
-            padding: 10px;
-            border-radius: 10px;
-            background-color: aliceblue;
-            margin-top: 15%;
-        }
-
-        .submit:hover {
-            background-color: antiquewhite;
-        }
-
-        @media screen and (max-width: 700px) {
-            
-            .container {
-                width: 98%;
-                height: 98%;
-            }
-
-            .container form {
-                height: auto;
-            }
-
-            .heading {
-                font-size: 3rem;
-            }
-
-            .select-element {
-                width: 80%;
-                padding: 12px;
-                border-radius: 12px;
-                font-size: 1rem;
-                background-color: white;
-            }
-
-            .submit {
-                font-size: 1rem;    
-            }
-
-        }
-
-    </style>
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/index-style.css') }}">
 </head>
 <body>
     <div class="body">
@@ -107,7 +12,7 @@
 
             <h1 class="heading">Class selection</h1>
 
-            <form action="/attendance" method="post">
+            <form action="/load-courses" method="post">
                 <select name="select-class" id="select-class" class="select-element" required>
                     <option value="">--Select a class--</option>
                     {% for class in classes.keys() %}
@@ -115,50 +20,29 @@
                     {% endfor %}
                 </select>
 
-                <select name="select-course" id="select-course" class="select-element" required>
-                    <option value="">--Select a course--</option>
-                    {% for course in courses %}
-                        <option value="{{ course }}" class="options">{{course}}</option>
-                    {% endfor %}
-                </select>
-
                 <select name="select-batch" id="select-batch" class="select-element">
                     <option value="">--Select a batch--</option>
                 </select>
 
-                <input type="submit" value="Next" class="submit" id="submit">
+                <input type="submit" value="Load Courses" class="submit" id="load-courses">
 
+            </form>
+
+            <form action="/attendance" method="post">
+
+                <select name="select-course" id="select-course" class="select-element" required>
+                    <option value="">--Select a course--</option>
+                    {% for course in courses %}
+                        <option value="{{ course[0] }}" class="options">{{course[0]}}</option>
+                    {% endfor %}
+                </select>
+
+                <input type="submit" value="Next" class="submit" id="submit">
             </form>
         </div>
     </div>
 
-
-    <script>
-
-        const batches = {{ class_json | safe}};
-        
-        const classSelect = document.getElementById("select-class");
-        const batchSelect = document.getElementById("select-batch");
-
-
-        classSelect.addEventListener('change', function () {
-            const selectedClass = this.value;
-
-            batchSelect.innerHTML = "<option value='' class='options'>--Select a batch--</option>"
-
-            if (selectedClass && batches[selectedClass]) {
-                batches[selectedClass].forEach(element => {
-                    
-                    const option = document.createElement('option');
-                    option.value = element;
-                    option.textContent = element; 
-                    batchSelect.appendChild(option);
-
-                });
-            }
-        });
-        
-
-    </script>
+    <script>const batches = {{ class_json | safe}};</script>
+    <script src="{{ url_for('static', filename='script/index-script.js') }}"></script>
 </body>
 </html>
